log-output/manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  namespace: dwk-mooc
  labels:
    app: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output-app1
          image: forge.fudwin.xyz:8443/sami/dwk-log-output-app1:latest
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: log-volume
              mountPath: /data
        - name: log-output-app2
          image: forge.fudwin.xyz:8443/sami/dwk-log-output-app2:latest
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: log-volume
              mountPath: /data
      volumes:
        - name: log-volume
          emptyDir: {}
