log-output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - port: 2000
      protocol: TCP
      targetPort: 8080
